Background styling fixes. Stretch? Filler divs

--- a/capstone/vue/src/global.css
+++ b/capstone/vue/src/global.css
@@ -4,3 +4,7 @@ body {
     background-color: darkgray;
    
 }
+
+.filler {
+    margin: 0px auto 900px auto;
+}
